--- a/project/frontend/public/index.html
+++ b/project/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>TT Sunday School</title>
+    <title>TT Timetable</title>
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/dist/styles.css">
   </head>
